--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.dropdown-fade {
+/* .dropdown-fade {
   position: relative;
-  overflow-y: auto; /* Ensure scrolling is enabled */
-  max-height: 200px; /* Set a max height to trigger overflow */
+  overflow-y: auto; 
+  max-height: 200px;
 }
 
 .dropdown-fade::after {
@@ -10,10 +10,10 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 30px; /* Height of the gradient */
+  height: 30px;
   background: linear-gradient(to top, white, rgba(255, 255, 255, 0));
-  pointer-events: none; /* Allows interaction with the dropdown items */
-}
+  pointer-events: none; 
+} */
 
 @tailwind base;
 @tailwind components;
